# swisscore-tba-lite

./: .gitignore  README.md  install_editable.bat  pyproject.toml
examples/: advanced_filters.py  downloading_files.py  filters_advanced.py  quick_start.py  sending_files.py  temporary_events.py  temporary_events_advanced.py  temporary_events_simple.py
swisscore_tba_lite/: __init__.py  filters.py
swisscore_tba_lite/bot_api/: __init__.py
swisscore_tba_lite/bot_api/v10_1/: __init__.py  bot.py  literals.py  objects.py
swisscore_tba_lite/bot_api/v10_2/: __init__.py  bot.py  literals.py  objects.py
swisscore_tba_lite/bot_api/v9_0/: __init__.py  bot.py  literals.py  objects.py
swisscore_tba_lite/bot_api/v9_1/: __init__.py  bot.py  literals.py  objects.py
swisscore_tba_lite/bot_api/v9_2/: __init__.py  bot.py  literals.py  objects.py
swisscore_tba_lite/core/: base_bot.py  event.py  exceptions.py  exit_codes.py  file_downloader.py  logger.py  runners.py
swisscore_tba_lite/filters/: __init__.py  composition.py  generators.py  helpers.py  pre_configured.py
swisscore_tba_lite/utils/: __init__.py  file_downloader.py  files.py  tg_html.py
