[project]
name = "swisscore-tba-lite"
version = "0.1.0"
description = "A minimal, async-native **Telegram Bot API** library — built for developers who want power without the clutter."
authors = [
    { name = "Patrick Schweizer (SwissCorePy)", email = "swisscore.py@gmail.com" }
]
license = { text = "UNLICENSE" }
dependencies = [
    "aiohttp",
    "aiofiles"
]
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["swisscore_tba_lite*"]
exclude = ["scripts", "examples"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
